--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "country-list": "^2.3.0",
+    "dotenv": "^16.4.5",
     "geoip-lite": "^1.4.10",
     "nanoid": "3.0.0",
     "node-schedule": "^2.1.1",
